[package]
name = "leios"
version = "0.1.0"
authors = ["Zongmin Lei <leizongmin@gmail.com>"]

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[package.metadata.bootimage]
default-target = "x86_64-leios.json"

[dependencies]
